--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>goida</title>
+  <title>Деменция</title>
 </head>
 <body>
-  <div class="goida"></div>
-  <div clsss = "niga">yuh</div>
   <h1></h1>
    <script src="main.js"></script>
 </body>
