--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="ru">
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>Деменция</title>
+  <title>goida</title>
 </head>
 <body>
-  <h2>доброе утро</h2>
-   <script src="main.js"></script>
+  <div class="cont">
+    <h1 class="hd">Dеменция</h1>
+      <p class="pt">Деме́нция (лат. dementia — безумие) — приобретённое слабоумие, стойкое снижение познавательной деятельности с утратой в той или иной степени ранее усвоенных знаний и практических навыков и затруднением или невозможностью приобретения новых.</p>
+  </div>
+ <script src="main.js"></script>
 </body>
- 
-  </html>
+
+
+</html>
