--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="cont">
-    <h1 class="hd">Dеменция</h1>
+    <h1 class="hd">Деменция</h1>
       <p class="pt">Деме́нция (лат. dementia — безумие) — приобретённое слабоумие, стойкое снижение познавательной деятельности с утратой в той или иной степени ранее усвоенных знаний и практических навыков и затруднением или невозможностью приобретения новых.</p>
   </div>
  <script src="main.js"></script>
