--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 
-<html lang="ru">
+<html lang="ru", lang="en">
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>goida</title>
+  <title>Деменция</title>
 </head>
 <body>
   <div class="cont">
-    <h1 class="hd">Деменция</h1>
-      <p class="pt">Деме́нция (лат. dementia — безумие) — приобретённое слабоумие, стойкое снижение познавательной деятельности с утратой в той или иной степени ранее усвоенных знаний и практических навыков и затруднением или невозможностью приобретения новых.</p>
+    <header class="hd">
+    <h1 class="hdt">Dеменция</h1>
+    </header>
+      <p class="pt">Серьёзный сайт бля буду
+        
+      </p>
   </div>
  <script src="main.js"></script>
 </body>
